--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Love Effects Collection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no">
+  <title>Love Effects</title>
   <style>
     body {
       margin: 0;
@@ -84,7 +84,7 @@
       switchEffect(3);
       setTimeout(() => {
         switchEffect(2);
-      }, 90000);
+      }, 86000);
     }
 
   </script>
